// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineControls should match snapshot for route /apps/:appId/pipeline 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Pipeline
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          When you have a pipeline for your application, you can manage deployments from this page. Each table row refers to a deployment, and by expading the content, you can follow progress in real time.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
          disabled=""
        >
          Deploy
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
        >
          API Keys
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          Delete Pipeline
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Pipeline
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        When you have a pipeline for your application, you can manage deployments from this page. Each table row refers to a deployment, and by expading the content, you can follow progress in real time.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        disabled=""
      >
        Deploy
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
      >
        API Keys
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Delete Pipeline
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelineControls should match snapshot for route /apps/:appId/pipeline/configure 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Pipeline
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          When you create an app, we create a pre-provisioned pipeline for your app. You should configure your build steps on this page before using the deployments page to manage your releases to our infra.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        >
          Save Config
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
        >
          API Keys
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          Delete Pipeline
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Pipeline
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        When you create an app, we create a pre-provisioned pipeline for your app. You should configure your build steps on this page before using the deployments page to manage your releases to our infra.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
      >
        Save Config
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
      >
        API Keys
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Delete Pipeline
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelineControls should match snapshot for route /apps/:appId/pipeline/environment 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Pipeline
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          When you have a pipeline for your application, you can manage deployments from this page. Each table row refers to a deployment, and by expading the content, you can follow progress in real time.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
          disabled=""
        >
          Deploy
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
        >
          API Keys
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          Delete Pipeline
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Pipeline
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        When you have a pipeline for your application, you can manage deployments from this page. Each table row refers to a deployment, and by expading the content, you can follow progress in real time.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        disabled=""
      >
        Deploy
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
      >
        API Keys
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Delete Pipeline
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelineControls should match snapshot for route /apps/:appId/pipeline/new 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Pipeline
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          When you create an app, we create a pre-provisioned pipeline for your app. You should configure your build steps on this page before using the deployments page to manage your releases to our infra.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
        >
          Save Config
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
        >
          API Keys
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          Delete Pipeline
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Pipeline
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        When you create an app, we create a pre-provisioned pipeline for your app. You should configure your build steps on this page before using the deployments page to manage your releases to our infra.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary e1tqqdf9-el-button"
      >
        Save Config
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
      >
        API Keys
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        Delete Pipeline
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelineControls should match snapshot where pipeline is provisioning 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Pipeline
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          When you have a pipeline for your application, you can manage deployments from this page. Each table row refers to a deployment, and by expading the content, you can follow progress in real time.
        </p>
        <button
          class="esplruv-el-mb3 ebee6r1-el-intent-primary esjgurx-el-is-loading e1tqqdf9-el-button"
          disabled=""
        >
          Provision
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
        >
          API Keys
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
          disabled=""
        >
          Delete Pipeline
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Pipeline
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        When you have a pipeline for your application, you can manage deployments from this page. Each table row refers to a deployment, and by expading the content, you can follow progress in real time.
      </p>
      <button
        class="esplruv-el-mb3 ebee6r1-el-intent-primary esjgurx-el-is-loading e1tqqdf9-el-button"
        disabled=""
      >
        Provision
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
      >
        API Keys
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        disabled=""
      >
        Delete Pipeline
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelineControls should match snapshot where there is no pipeline 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div
      id="root"
    />
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e6p05ya-el-fade-in"
      >
        <span
          class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
        >
          <svg />
        </span>
        <h2
          class="e15ggth7-el-subtitle"
        >
          Pipeline
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
        >
          To get started with Reapit IAAS pipelines, first take the time to read the documentation. Then visit this page to configure your first pipeline.
        </p>
        <button
          class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
        >
          API Keys
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
        <button
          class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
        >
          View Docs
          <div
            class="e1q1vabn-el-button-loader"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e6p05ya-el-fade-in"
    >
      <span
        class="esplruv-el-mb3 e143qafr-el-icon-size-large ej9yrfo-el-icon"
      >
        <svg />
      </span>
      <h2
        class="e15ggth7-el-subtitle"
      >
        Pipeline
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text elle7d2-el-small-text"
      >
        To get started with Reapit IAAS pipelines, first take the time to read the documentation. Then visit this page to configure your first pipeline.
      </p>
      <button
        class="esplruv-el-mb3 epibvz0-el-intent-secondary e1tqqdf9-el-button"
      >
        API Keys
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
      <button
        class="esplruv-el-mb3 e1fle5tm-el-intent-neutral e1tqqdf9-el-button"
      >
        View Docs
        <div
          class="e1q1vabn-el-button-loader"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
